static/styles/zulip.css
/* ... */
.status-time {
    top: 8px !important;
}

.message_controls {
    display: inline-block;
    position: absolute;
    top: -1px;
    right: -56px;
    width: 54px;
    height: 22px;
    z-index: 1;

    /* This is a bit tricky; we need to reserve space for the message
       controls even when the message isn't hovered, so that hover
       doesn't disturb the layout.  Usually that would be just
       visibility: hidden, but that cannot be animated, so we set
       opacity as well, which can be animated. */
    > div {
        opacity: 0;
        visibility: hidden;
        transition: all 0.2s ease;
        width: 16px;
        text-align: center;

        > i {
            vertical-align: middle;
        }
    }

    > .reaction_button {
        display: inline-block;
        position: relative;
        color: hsl(0, 0%, 73%);
        &:hover {
            color: hsl(200, 100%, 40%);
        }
    }

    &.sender-status-controls {
        top: 10px;
    }

    .message_failed {
        opacity: 1 !important;
        display: inline-flex;
        justify-content: space-between;
        /* error icon width is 11px, gap between icons equals 28px - 2*11px = 6px */
        width: 30px;
        cursor: pointer;
        font-weight: bold;
        color: hsl(0, 100%, 50%);
        position: relative;

        .rotating {
            display: inline-block;

            animation: rotate 1s infinite linear;
        }
    }

    .star_container {
        display: inline-block;

        &:not(.empty-star) {
            color: hsl(106, 77%, 29%);

            /* Opacity/visibility as though the message is hovered. */
            opacity: 1 !important;
            visibility: visible !important;
        }
    }
}

.star {
    font-size: 14px;

    &:hover {
        cursor: pointer;
        color: hsl(153, 80%, 25%);
    }
}

.messagebox {
    position: relative;
    word-wrap: break-word;
    cursor: pointer;
    vertical-align: top;
    border: none;

    &:hover .message_controls,
    &:focus-within .message_controls {
        .empty-star {
            opacity: 0.4;
        }

        .empty-star:hover {
            cursor: pointer;
            opacity: 1;
        }

        > div {
            opacity: 1;
            visibility: visible;
        }
    }

    .message_top_line {
        position: relative;
    }
}

.message_header {
    vertical-align: middle;
    text-align: left;
    /* We can overflow-y if the font size gets big */
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    font-weight: 600;
    line-height: 14px;
    position: relative;
    z-index: 0;
}

.message_list {
    .recipient_row {
        border-bottom: 1px solid hsl(0, 0%, 88%);
        margin-bottom: 10px;
    }
}

.floating_recipient {
    .recipient_row {
        border-top: 1px solid hsl(0, 0%, 88%);
    }

    .recipient_row_date.hide-date {
        display: block;
    }

    /*
       We can't collapse the floating recipient bar yet, so this is
       just a temporary hack.
    */
    .messages-collapse {
        display: none;
    }

    .message_header_private_message {
        border-bottom: 0;
        border-left: 0;
    }
}

.stream_label {
    display: inline-block;
    padding: 4px 6px 3px 6px;
    font-weight: normal;
    height: 17px;
    line-height: 17px;
    border-top-color: hsla(0, 0%, 0%, 0);
    border-right-color: hsla(0, 0%, 0%, 0);
    border-bottom-color: hsla(0, 0%, 0%, 0);
    background-color: hsl(0, 0%, 88%);
    border-left-color: hsl(0, 0%, 88%);
    border-width: 0;
    position: relative;
    text-decoration: none;

    .invite-stream-icon {
        font-size: 12px;
        line-height: 17px;
    }

    &:hover {
        text-decoration: none;
    }

    &::after {
        left: 100%;
        top: 50%;
        content: " ";
        height: 0;
        width: 0;
        position: absolute;
        pointer-events: none;
        margin-top: -11px;
        border-style: solid;
        border-width: 11px 0 11px 5px;
        border-color: inherit;
        z-index: 2;
        transform: scale(0.9999);
    }

    &::before {
        left: 100%;
        top: 50%;
        content: " ";
        height: 0;
        width: 0;
        position: absolute;
        pointer-events: none;
        margin-top: -14px;
        border-style: solid;
        border-width: 14px 0 14px 6px;
        border-color: hsla(0, 0%, 0%, 0) hsla(0, 0%, 0%, 0) hsla(0, 0%, 0%, 0)
            transparent;
        z-index: 1;
        transform: scale(0.9999);
    }
}

.stream_topic {
    display: inline-block;
    padding: 3px 3px 2px 9px;
    height: 17px;
    line-height: 17px;
    overflow: hidden;
    text-overflow: ellipsis;
}

.recipient_bar_controls {
    flex-grow: 1;
}

.recipient_row_date {
    color: hsl(0, 0%, 53%);
    font-size: 12px;
    font-weight: 600;
    padding: 3px 11px 2px 10px;
    height: 17px;
    line-height: 17px;

    &.hide-date {
        display: none;
    }
}

.recipient_bar_icon {
    padding-left: 2px;
    padding-right: 2px;
}

.summary_row {
    .message_header {
        padding: 5px 0 4px 5px;
        border-radius: 0;
    }

    &.last_message {
        .message_header {
            border-bottom-right-radius: 3px;
            box-shadow: inset 0 2px 1px -2px hsl(0, 0%, 20%),
                inset -2px 0 1px -2px hsl(0, 0%, 20%),
                inset 0 -2px 1px -2px hsl(0, 0%, 20%);
        }

        .summary_colorblock {
            border-bottom-left-radius: 3px;
        }
    }
}

.bookend_tr + .summary_row {
    .message_header {
        border-top-right-radius: 3px;
    }

    .summary_colorblock {
        border-top-left-radius: 3px;
    }
}

.copy-paste-text {
    /* Hide the text that we want copy paste to capture */
    position: absolute;
    text-indent: -99999px;
    float: left;
    width: 0;
}

.summary_row_private_message .summary_colorblock {
    background-color: hsl(0, 0%, 0%);
}

.messages-expand,
.messages-collapse {
    cursor: pointer;
}
/* ... */

